issue with overflow text

--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -15,6 +15,9 @@
 
 .card {
   max-width: 413px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__title {
@@ -23,11 +26,15 @@
   font-size: 20px;
   line-height: 1.2;
   font-weight: 500;
+  max-width: 350px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .card__image {
   border-radius: 8px;
-  width: 413px;
+  width: 100%;
   height: 413px;
   display: block;
 }
@@ -43,10 +50,35 @@
   border: none;
   background-color: transparent;
   opacity: 40%;
+  align-content: center;
 }
 
 .card__content {
   display: flex;
   justify-content: space-between;
   padding: 12px 0 0;
+}
+
+@media screen and (max-width: 425px) {
+  .card-gallery__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+    padding: 0 0 20px;
+  }
+
+  .card__image {
+    width: 100%;
+    height: 288px;
+  }
+
+  .card__title {
+    font-size: 16px;
+    line-height: 1.2;
+    max-width: 353px;
+  }
+
+  .card__like-button {
+    width: 20px;
+    height: 18px;
+    background-size: 100% 100%;
+  }
 }
